--- a/src/app/all-details/all-details.component.html
+++ b/src/app/all-details/all-details.component.html
@@ -1,6 +1,9 @@
 <button (click)="getAllDetails()">Get All Details</button>
-<div *ngFor="let detail of allDetails">
-  <p>Name: {{ detail.name }}</p>
-  <p>Email: {{ detail.email }}</p>
-  <hr>
+
+<div *ngIf="dataLoaded">
+  <div *ngFor="let detail of allDetails">
+    <p>Name: {{ detail.name }}</p>
+    <p>Email: {{ detail.email }}</p>
+    <hr>
+  </div>
 </div>
