--- a/src/app/single-detail/single-detail.component.scss
+++ b/src/app/single-detail/single-detail.component.scss
@@ -6,6 +6,7 @@ input[type="number"] {
   }
   
   button {
+    margin: 5px;
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
